# DIFF_WebRTC_Raspi5b

./: .gitignore  README.md
early_yuyv_dct_lz4/: README.md
early_yuyv_dct_lz4/core_project_0205/: CMakeLists.txt  FastCodec.h  sender_pi.cpp
early_yuyv_dct_lz4/related_experiments/: low_latency_udp.cpp  test_UDP.cpp  test_camera.cpp  test_frame.cpp
project_0321plus/: docker-compose.yml
project_0321plus/video-processor/: CMakeLists.txt  Dockerfile
project_0321plus/video-processor/src/: main.cpp
project_0321plus/webrtc-gateway/: CMakeLists.txt  Dockerfile
project_0321plus/webrtc-gateway/src/: main.cpp
signaling-server/: package-lock.json  package.json  server.js
signaling-server/public/: index.html
systemd/: pi-signaling.service
